; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_tvout.c_sti_tvout_destroy_encoders.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_tvout.c_sti_tvout_destroy_encoders.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sti_tvout = type { i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sti_tvout*)* @sti_tvout_destroy_encoders to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sti_tvout_destroy_encoders(%struct.sti_tvout* %0) #0 {
  %2 = alloca %struct.sti_tvout*, align 8
  store %struct.sti_tvout* %0, %struct.sti_tvout** %2, align 8
  %3 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %4 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %9 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @drm_encoder_cleanup(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %14 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %13, i32 0, i32 2
  store i32* null, i32** %14, align 8
  %15 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %16 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %12
  %20 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %21 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @drm_encoder_cleanup(i32* %22)
  br label %24

24:                                               ; preds = %19, %12
  %25 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %26 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %25, i32 0, i32 1
  store i32* null, i32** %26, align 8
  %27 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %28 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %36

31:                                               ; preds = %24
  %32 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %33 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = call i32 @drm_encoder_cleanup(i32* %34)
  br label %36

36:                                               ; preds = %31, %24
  %37 = load %struct.sti_tvout*, %struct.sti_tvout** %2, align 8
  %38 = getelementptr inbounds %struct.sti_tvout, %struct.sti_tvout* %37, i32 0, i32 0
  store i32* null, i32** %38, align 8
  ret void
}

declare dso_local i32 @drm_encoder_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
